Fixed bug #29338 (unencoded spaces get ignored after certain tags).